Added method for removing all expired items